[gd_scene load_steps=19 format=3 uid="uid://dqmu3yhsnod6k"]

[ext_resource type="Script" path="res://Charmander.gd" id="1_o4oye"]
[ext_resource type="Texture2D" uid="uid://gmuasefy7ag8" path="res://sprites/effects/sma4_sprites copy 3.png" id="2_60nr6"]
[ext_resource type="Texture2D" uid="uid://bmxh77vi6nur4" path="res://sprites/mobs/output-onlinepngtools-2 copy 5.png" id="2_dax5x"]
[ext_resource type="Texture2D" uid="uid://ua6r8137q4hs" path="res://sprites/player/all anims/death/New Piskel.png" id="3_8prv4"]
[ext_resource type="Texture2D" uid="uid://dchefvv82cxar" path="res://sprites/mobs/output-onlinepngtools-2.png" id="3_w2i3y"]
[ext_resource type="Texture2D" uid="uid://cgqipx5gsfcuv" path="res://sprites/mobs/output-onlinepngtools-2 copy 4.png" id="7_ovfbi"]
[ext_resource type="Texture2D" uid="uid://ktkatlwyadnp" path="res://sprites/mobs/output-onlinepngtools-2 copy 6.png" id="8_bm11v"]

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_gx704"]
length = 7.0

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_swlwf"]
length = 9.0

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_38d6j"]
length = 7.0

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_mpvjl"]
length = 9.0

[sub_resource type="AtlasTexture" id="AtlasTexture_gi37v"]
atlas = ExtResource("3_8prv4")
region = Rect2(0, 0, 42, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_raudr"]
atlas = ExtResource("3_8prv4")
region = Rect2(42, 0, 42, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg0j0"]
atlas = ExtResource("3_8prv4")
region = Rect2(0, 31, 42, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv4sx"]
atlas = ExtResource("3_8prv4")
region = Rect2(42, 31, 42, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_rut71"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_60nr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi37v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_raudr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg0j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv4sx")
}],
"loop": false,
"name": &"Death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ovfbi")
}, {
"duration": 1.0,
"texture": ExtResource("8_bm11v")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dax5x")
}, {
"duration": 1.0,
"texture": ExtResource("3_w2i3y")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_coccm"]
size = Vector2(28, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ol3a"]
size = Vector2(18, 13)

[node name="Charmander" type="CharacterBody2D"]
script = ExtResource("1_o4oye")

[node name="CollisionDown" type="CollisionShape2D" parent="."]
shape = SubResource("SeparationRayShape2D_gx704")

[node name="CollisionShapeLeft" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("SeparationRayShape2D_swlwf")

[node name="CollisionShapeTop" type="CollisionShape2D" parent="."]
rotation = 3.14159
shape = SubResource("SeparationRayShape2D_38d6j")

[node name="CollisionShapeRight" type="CollisionShape2D" parent="."]
rotation = 4.71239
shape = SubResource("SeparationRayShape2D_mpvjl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1, 0.846774)
sprite_frames = SubResource("SpriteFrames_rut71")
animation = &"Walk"

[node name="LeafDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeafDetection"]
shape = SubResource("RectangleShape2D_coccm")

[node name="PlayerDeath" type="Area2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerDeath"]
scale = Vector2(1.00907, 0.99707)
polygon = PackedVector2Array(7.92809, -6.01763, 7.92809, -6.01763, 8.91909, -4.01175, 6.93707, 1.00294, 3.96404, 3.00882, 0, 5.01469, -3.96405, 2.00588, -7.92809, -2.00588, -8.9191, -4.01175, -6.93708, -7.02057, -3.96405, -8.02351, -0.99101, -8.02351, 2.97303, -8.02351, 5.94607, -7.02057)
disabled = true

[node name="PlayerCollision" type="Area2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerCollision"]
visible = false
polygon = PackedVector2Array(-10, -4, -5, 2, 0, 5, 7, 2, 10, -4, 3, -2)
disabled = true
one_way_collision_margin = 0.1

[node name="PlayerHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
shape = SubResource("RectangleShape2D_8ol3a")

[connection signal="body_entered" from="LeafDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="LeafDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
[connection signal="area_entered" from="PlayerHitbox" to="." method="_on_player_hitbox_area_entered"]
[connection signal="body_entered" from="PlayerHitbox" to="." method="_on_player_hitbox_body_entered"]
